--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%= VUE_APP_KAKAO_APP_MAP_KEY %>&libraries=services,clusterer"></script>
   </body>
 </html>
